--- a/temporal-remix-app/package.json
+++ b/temporal-remix-app/package.json
@@ -8,21 +8,21 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@grpc/grpc-js": "1.8.4",
-    "@remix-run/node": "^1.11.0",
-    "@remix-run/react": "^1.11.0",
-    "@remix-run/serve": "^1.11.0",
-    "@temporalio/activity": "1.5.2",
-    "@temporalio/client": "1.5.2",
-    "@temporalio/worker": "1.5.2",
-    "@temporalio/workflow": "1.5.2",
+    "@grpc/grpc-js": "1.6.7",
+    "@remix-run/node": "1.7.2",
+    "@remix-run/react": "1.7.2",
+    "@remix-run/serve": "1.7.2",
+    "@temporalio/activity": "1.4.4",
+    "@temporalio/client": "1.4.4",
+    "@temporalio/worker": "1.4.4",
+    "@temporalio/workflow": "1.4.4",
     "isbot": "^3.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@remix-run/dev": "^1.11.0",
-    "@remix-run/eslint-config": "^1.11.0",
+    "@remix-run/dev": "1.7.2",
+    "@remix-run/eslint-config": "1.7.2",
     "@types/react": "^18.0.25",
     "@types/react-dom": "^18.0.8",
     "eslint": "^8.27.0",
